# ClientServerExample

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  GlobalConfig.cmake  README.md
src/: CMakeLists.txt  global.cmake
src/Client/: AppSettings.cpp  AppSettings.hpp  AppSettings.ui  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  PersistentProgressDialog.cpp  PersistentProgressDialog.hpp  main.cpp
src/Common/: CMakeLists.txt  Protocol.cpp  Protocol.hpp  RegLogger.cpp  RegLogger.hpp  Utils.cpp  Utils.hpp
src/Net/: CMakeLists.txt  NetConnection.cpp  NetConnection.hpp  NetHeaders.cpp  NetHeaders.hpp  NetThread.cpp  NetThread.hpp  NetUtils.cpp  NetUtils.hpp  SslClient.cpp  SslClient.hpp  SslServer.cpp  SslServer.hpp  TcpClient.cpp  TcpClient.hpp  TcpServer.cpp  TcpServer.hpp
src/Server/: CMakeLists.txt  ExampleServer.cpp  ExampleServer.hpp  main.cpp
